--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
+  <a href="https://www.linkedin.com/in/md-shan-60743321b/"></a>
  <p class="w3-small">This website was made with W3schools Spaces. Make your own free website today!</p>
  <a class="w3-button w3-round-xxlarge w3-small w3-light-grey" href="https://www.w3schools.com/spaces" target="_blank">Start now</a> 
  <!-- End footer -->
